# TringleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Sandbox/src/: Example.cpp  Example.h
Tringle/assets/Shaders/: default.frag  default.vert
Tringle/src/: Tringle.h
Tringle/src/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  EntryPoint.cpp  Log.h  Resources.cpp  Resources.h  Singleton.h  TimeManager.cpp  TimeManager.h  Timer.cpp  Timer.h
Tringle/src/Entity/: Component.h  Entity.h  Scene.h  SceneManager.h
Tringle/src/Event/: EventManager.h
Tringle/src/Graphics/: Mesh.cpp  Mesh.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Tringle/src/Utility/: CameraManager.h  TimeManager.cpp  TimeManager.h  Timer.cpp  Timer.h
Tringle/src/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
cmake/: FindASSIMP.cmake  FindGLFW3.cmake
